refactor: adiciona razao social no footer

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <footer class="bg-slate-950 py-10 border-t border-slate-800">
         <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
             <div class="text-slate-400 text-sm">
-                &copy; 2026 Drogashop Nova Veneza. Todos os direitos reservados.
+                &copy; 2026 POP NOVA VENEZA COMERCIAL FARMACEUTICA LTDA. Todos os direitos reservados.
                 <br>CNPJ: 32.525.664/0001-60
             </div>
             <button id="privacy-btn" class="text-slate-400 hover:text-white text-sm underline transition-colors">
